# backslash

./: .gitignore  Cargo.toml  std.bs
src/: bytes.rs  constants.rs  int.rs  io.rs  lib.rs  list.rs  main.rs  parser.rs  std.bs  std.gl  sugar.rs  term.rs  test.rs
tests/: end_to_end.rs
vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode/syntaxes/: gali.tmLanguage.json
