[package]
name = "gali"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "An implementation of the untyped lambda caluculus, with some sugar for convenience."

[dependencies]
anstyle = "1.0.8"
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
lazy_static = "1.5.0"
thiserror = "1.0.63"
